--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <img src="img/duda.jpg" alt="foto-maravilhosa">
             <h3>Duda Magalhães</h3>
-            <p>Eu sou top e o resto é sutiã</p>
+            <p>Posso, apesar da minha pequenez, aspirar a santidade- Santa Teresinha</p>
         </header>
         <main>
             <a href="www.intagram.com.br">Instagram</a>
