--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <p>Posso, apesar da minha pequenez, aspirar a santidade- Santa Teresinha</p>
         </header>
         <main>
-            <a href="www.intagram.com.br">Instagram</a>
-            <a href="www.vsco.com.br">Vsco</a>
-            <a href="www.snapchat.com.br">Snapchat</a>
-            <a href="www.tiktok.com.br">TikTok</a>
+            <a href="www.intagram.com/m.magaalhaes">Instagram</a>
+            <a href="www.vsco.com/magaalhaesduda">Vsco</a>
+            <a href="www.snapchat.com/magaalhaesduda">Snapchat</a>
+            <a href="www.tiktok.com/m.magaalhaes">TikTok</a>
         </main>
     </section>
     <p class="footer" >Copyright 2025 - Duda Magalhães</p>
